--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,23 @@
-.App {
+@import url('https://fonts.googleapis.com/css?family=Patua+One');
+
+.weather {
+  font-family: 'Patua One', cursive;
+  /*color: navy;*/
+  background: rgba(0, 0, 136, 0.15);
+  width: 150px;
   text-align: center;
+  border-radius: 5px;
+  box-shadow: #d1c8ff 5px 5px 5px;
+  opacity: 1;
+}
+/*.weather:hover {*/
+  /*opacity: 1;*/
+  /*transition: opacity .5s ease-in-out;*/
+
+/*}*/
+.weather-icon-single {
+  margin: .2em;
+  color: rgba(128, 96, 0, 1);
+  font-size: 3em;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
